--- a/styles.css
+++ b/styles.css
@@ -295,3 +295,9 @@ tbody {
   width: 70vw;
   margin: 5vh auto;
 }
+
+pre {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  font-weight: bold;
+}
